Changes made to SPeakers and schedule, along with mission statement

--- a/Website.html
+++ b/Website.html
@@ -58,10 +58,8 @@
             <p>The mission of the Fontbonne Hackers’ club is to serve as a forum where cyber-security enthusiasts may meet and discuss emerging security issues, practice ethical hacking skills, train for cyber defense competitions and conferences and promote awareness in all areas of cyber security among the faculty, staff, and student body of the university as well as the larger community.</p>
         </div>
         <div class="col-sm">
-            <h3 class="mt-5 mb-4">Expert Speakers</h3>
-            <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
-            <p>Want to meet the international Cloud community and share skills with some of the world's top experts, hackers, and makers? Be the first to know what to expect for the future of Cloud Computing.</p>
-            <p>Cloud Sec Conf is committed to being inclusive and welcoming for everyone. We look forward to another intensive day of learning and sharing.</p>
+            <h3 class="mt-5 mb-4">Speakers</h3>
+            <p>Our speakers are well-rounded and educated on these topics. If you are interested in going to this event please sign-up at the bottom.</p>
         </div>
         <div class="col-sm">
             <h3 class="mt-5 mb-4">What You'll Learn</h3>
