Pic added to top of webpage

--- a/Website.html
+++ b/Website.html
@@ -39,9 +39,9 @@
 
 <!--jumbotron -->
 <div class="jumbotron jumbotron-fluid bg-info text-white">
+    <img class="mb-1 rounded img-fluid" src="images/Hackers Club Pic.jpg" alt="pic">
     <div class="container text-sm-center pt-5">
-        <h1 class="display-2">Next Meetings Topic: </h1>
-        <p class="lead">Metasploitable 2</p>
+        <h1 class="display-2">HACKERS' CLUB </h1>
         <div class="btn-group mt-2" role="group" aria-label="Basic example">
             <a class="btn btn-primary btn-lg">Register Now!</a>
             <a class="btn btn-secondary btn-lg" href="#speakers">See Speakers</a>
@@ -54,7 +54,6 @@
     <div class="row">
         <div class="col-sm">
             <h3 class="mt-5 mb-4 ">Mission Statement</h3>
-            <img class="mb-1 rounded img-fluid" src="images/stlouis.jpg" alt="st.louis">
             <p>The mission of the Fontbonne Hackers’ club is to serve as a forum where cyber-security enthusiasts may meet and discuss emerging security issues, practice ethical hacking skills, train for cyber defense competitions and conferences and promote awareness in all areas of cyber security among the faculty, staff, and student body of the university as well as the larger community.</p>
         </div>
         <div class="col-sm">
