--- a/Website.html
+++ b/Website.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <!--navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,9 +20,6 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#speakers">Speakers</a>
@@ -38,7 +35,7 @@
 <!--/navbar -->
 
 <!--jumbotron -->
-<div class="jumbotron jumbotron-fluid bg-info text-white">
+<div class="jumbotron jumbotron-fluid bg-dark text-white">
     <img class="mb-1 rounded img-fluid" src="images/Hackers Club Pic.jpg" alt="pic">
     <div class="container text-sm-center pt-5">
         <h1 class="display-2">HACKERS' CLUB </h1>
@@ -74,7 +71,6 @@
     <div class="row">
         <div class="col-md-6 col-lg-4">
             <div class="card">
-                <img class="card-img-top" src="images/angie.png" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title">Zahid Anwar</h4>
                     <p class="card-text">PhD from Illinois at Urbana/Champaign. Industry experience at IBM, Intel, Motorola, NCSA, CLS, CERN, xFlow, & Vertical Systems. Enjoys designing/hacking/analyzing networked software systems.</p>
@@ -84,7 +80,6 @@
 
         <div class="col-md-6 col-lg-4">
             <div class="card">
-                <img class="card-img-top" src="images/ecma.png" alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title">Zach Hempen</h4>
                     <p class="card-text">Currently going for Bachelors in Cyber Security at Fontbonne University. Cyber Intern at TechGuard Security. Experience with ELK, Rocknsm, & SELKS Servers.</p>
@@ -139,33 +134,9 @@
 
     <!-- footer -->
     <div class="row py-3">
-        <div class="col-md-7">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="#">Community</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tracks</a>
-                </li>
-                <li class="nav-item">
-                    <!-- split button -->
-                    <div class="btn-group dropup">
-                        <button type="button" class="btn btn-deoco">Other Confs</button>
-                        <button type="button" class="btn btn-deoco dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Git</a>
-                            <a class="dropdown-item" href="#">Bootstrap</a>
-                            <a class="dropdown-item" href="#">Javascript</a>
-                            <a class="dropdown-item" href="#">Spring</a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+
         <div class="col-md-5 text-md-right">
-            <small>&copy; 2018 Cloud Sec Conf &amp; Fontbonne University</small>
+            <small>&copy; 2018 Hackers' Club &amp; Fontbonne University</small>
         </div>
     </div>
 
