Changed title up right and sentence in speaker: Zach

--- a/Website.html
+++ b/Website.html
@@ -29,7 +29,7 @@
                 </li>
             </ul>
         </div>
-        <a class="navbar-brand" href="http://www.fontbonne.edu">Presented by The Hackers' Club</a>
+        <a class="navbar-brand" href="http://www.fontbonne.edu">Presented by Fontbonne Hackers' Club</a>
     </div>
 </nav>
 <!--/navbar -->
@@ -82,7 +82,7 @@
             <div class="card">
                 <div class="card-block">
                     <h4 class="card-title">Zach Hempen</h4>
-                    <p class="card-text">Currently going for Bachelors in Cyber Security at Fontbonne University. Cyber Intern at TechGuard Security. Experience with ELK, Rocknsm, & SELKS Servers.</p>
+                    <p class="card-text">Currently going for Bachelors in Cyber Security at Fontbonne University. Cyber Intern at TechGuard Security. Experience with ELK, Rocknsm, & SELKS Servers, as well as Web Vulnerability Exploits.</p>
                 </div>
             </div>
         </div>
@@ -96,14 +96,14 @@
         <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">Trivia Questions</h5>
-                <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:30pm</span>
+                <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:00pm</span>
             </div>
             <p class="mb-1">There will be prizes!</p>
         </a>
         <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
                 <h5 class="mb-1">Metasploitable 2</h5>
-                <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:50am</span>
+                <span class="badge badge-default badge-pill bg-info px-2 py-2 mt-2">12:15am</span>
             </div>
             <p class="mb-1">Nmap, Exploits, Armitage, Backdoor Access</p>
         </a>
